Enable scripts on individual posts, and update regex post

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,3 +1,7 @@
 html, body, #___gatsby, #gatsby-focus-wrapper {
 	height: 100%;
 }
+
+code[class*="language-"], pre[class*="language-"] {
+  font-size: 13px;
+}
