Pt 5 feature complete, moving pm implementation to pt 6

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -16,3 +16,13 @@ blockquote {
 .gatsby-highlight {
   margin-bottom: 1.5rem;
 }
+
+p:has(> svg[id^='mermaid-']) {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+#mermaid-0 {
+  font-size: 15px;
+}
